finalizing midterm code

--- a/secret.yaml
+++ b/secret.yaml
@@ -3,6 +3,6 @@ openai:
 google:
   secret: "xxxxxxx"
 word2vec:
-  path: "path_to_your_word2vec_file"
+  path: "word2vec-google-news-300.bin"
 llama:
-  path: "./ggml-xxxx.bin"
+  path: "./llama-2-7b.ggmlv3.q2_K.bin"
